fixed footer items alignment on phones

--- a/styles.css
+++ b/styles.css
@@ -1473,13 +1473,21 @@ MOBILE RESPONSIVENESS ↓
     }
 
     .footer__item__list {
-        justify-content: flex-start;
+        justify-content: center;
         margin-top: -36px;
     }
 
     .footer__item {
         width: calc(100% / 3);
         padding-top: 36px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer__link {
+        margin: 0 auto;
+        margin-bottom: 12px;
     }
 
     .footer__end {
